# galileo-hackathon

./: README.md  pyproject.toml
api/: main.py
api/services/: dataframe.py
scripts/: lint.sh
